Forex-Poz menü létrehozása

--- a/src/main/resources/templates/fnyit.html
+++ b/src/main/resources/templates/fnyit.html
@@ -15,7 +15,7 @@
     <a href="/fnyit">Forex-Nyit menü</a> |
     <a href="/fpoz">Forex-Poz menü</a> |
     <a href="/fzar">Forex-Zár menü</a>
-</nav>s
+</nav>
 <h2>Forex Pozíció Nyitás</h2>
 
 <form th:action="@{/fnyit}" th:object="${param}" method="post">
